Adding description to person route
